Fixed process list spacing, fixed stop and start button size

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -121,6 +121,16 @@ body {
 
 .process-row-space {
   padding: 16px 0px;
+
+  height: 3em;
+
+  .process-row-actions {
+    font-size: 16px;
+
+    .process-row-action {
+      font-size: inherit;
+    }
+  }
 }
 
 .container-fluid #intercom-container .intercom-launcher {
